--- a/requirements.txt
+++ b/requirements.txt
@@ -1,290 +1,15 @@
-alabaster==0.7.9
-amqp==2.1.4
-anaconda-clean==1.0
-anaconda-client==1.6.3
-anaconda-navigator==1.6.4
-anaconda-project==0.6.0
-anyjson==0.3.3
-appdirs==1.4.3
-appnope==0.1.0
-appscript==1.0.1
-argcomplete==1.0.0
-args==0.1.0
-astroid==1.4.7
-astropy==1.2.1
-AuthorizeSauce==0.3.3
-awscli==1.11.97
-Babel==2.3.4
-backports-abc==0.4
-backports.csv==1.0.5
-backports.shutil-get-terminal-size==1.0.0
-backports.ssl-match-hostname==3.4.0.2
-backports.tempfile==1.0rc1
-backports.weakref==1.0rc1
-bcrypt==1.1.0
-beautifulsoup4==4.5.1
-billiard==3.5.0.2
-bitarray==0.8.1
-blaze==0.10.1
-blessings==1.6
-blinker==1.4
-bokeh==0.12.2
-boto==2.48.0
-botocore==1.5.60
-Bottleneck==1.1.0
-bpython==0.16
-bson==0.4.6
-buildbot==0.8.12
-cairocffi==0.6
-CairoSVG==1.0.9
-cdecimal==2.3
-celery==4.0.2
-Cerberus==0.9.2
-cffi==1.10.0
+certifi==2018.1.18
 chardet==3.0.4
-Cheetah==2.4.4
-chest==0.2.3
-ClassicUPS==0.1.8
-cli-helpers==0.2.3
 click==6.7
-clint==0.5.1
-cloudpickle==0.2.1
-clyent==1.2.2
-colorama==0.2.5
-conda==4.3.27
-conda-build==2.0.2
-configobj==5.0.6
-configparser==3.5.0
-contextlib2==0.5.3
-cryptography==1.5
-cssselect==0.9.1
-curtsies==0.2.11
-cycler==0.10.0
-Cython==0.23.4
-cytoolz==0.8.0
-dask==0.11.0
-datashape==0.5.2
-decorator==4.0.9
-dict2xml==1.3
-dill==0.2.5
-docopt==0.6.2
-docutils==0.12
-dynd==0.7.3.dev1
-enum34==1.1.6
-et-xmlfile==1.0.1
-Eve==0.6.4
-Eve-Swagger==0.0.6
-Events==0.2.1
-fastcache==1.0.2
-feedparser==5.1.3
-filelock==2.0.6
 Flask==0.12.2
-Flask-Bcrypt==0.6.0
-Flask-Cache==0.13.1
-Flask-CDN==1.2.1
-Flask-Cors==3.0.3
-Flask-Login==0.2.11
-Flask-PyMongo==0.4.0
-Flask-SocketIO==2.0
-Flask-WeasyPrint==0.4
-Flask-WTF==0.10.3
-floyd-cli==0.9.5
-funcsigs==1.0.2
-functools32==3.2.3.post2
-futures==3.0.5
-gevent==1.1.2
-gitdb==0.6.4
-gitdb2==2.0.0
-GitPython==1.0.2
-google-api-python-client==1.6.5
-greenlet==0.4.10
-grin==1.2.1
-h5py==2.6.0
-HeapDict==1.0.0
-holidays==0.3.1
-html5lib==0.999
-httplib2==0.10.3
-humanize==0.5.1
-idna==2.1
-imagesize==0.7.1
-ipaddress==1.0.16
-ipdb==0.10.2
-ipykernel==4.5.0
-ipython==5.1.0
-ipython-genutils==0.1.0
-ipywidgets==5.2.2
+Flask-OAuthlib==0.9.4
+idna==2.6
 itsdangerous==0.24
-jdcal==1.2
-jedi==0.9.0
-Jinja2==2.7.3
-jmespath==0.9.1
-jquery-unparam==2.0.0
-jsonpatch==1.3
-jsonpointer==1.0
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==4.4.0
-jupyter-console==5.0.0
-jupyter-core==4.2.0
-kombu==4.0.2
-lazy-object-proxy==1.2.1
-llvmlite==0.13.0
-locket==0.2.0
-lxml==3.3.3
-Markdown==2.6.8
-MarkupSafe==0.23
-marshmallow==2.13.5
-matplotlib==2.0.2
-memory-profiler==0.43
-mistune==0.7.3
-mock==2.0.0
-mongoengine==0.13.0
-mpmath==0.19
-msgpack-python==0.4.8
-multipledispatch==0.4.8
-nb-anacondacloud==1.2.0
-nb-conda==2.0.0
-nb-conda-kernels==2.0.0
-nbconvert==4.2.0
-nbformat==4.1.0
-nbpresent==3.0.2
-neovim==0.1.13
-networkx==1.11
-nltk==3.2.1
-nose==1.3.6
-nose-exclude==0.2.0
-notebook==4.2.3
-numba==0.28.1+0.gfe99fbc.dirty
-numexpr==2.6.1
-numpy==1.10.4
-oauth==1.0.1
-oauth2client==4.1.2
-odo==0.5.0
-openpyxl==2.3.2
-packaging==16.8
-pandas==0.18.1
-partd==0.3.6
-path.py==0.0.0
-pathlib2==2.2.1
-patsy==0.4.1
-pbr==3.0.0
-pep8==1.7.0
-pexpect==4.0.1
-pgcli==1.8.1
-pgspecial==1.9.0
-pickleshare==0.7.4
-Pillow==2.7.0
-pkginfo==1.3.2
-ply==3.9
-powerline-status==2.6
-prettytable==0.7.2
-prompt-toolkit==1.0.15
-protobuf==3.2.0
-psutil==4.3.1
-psycopg2==2.7.3.2
-ptyprocess==0.5.1
-py==1.4.33
-py-bcrypt==0.4
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-PyAudio==0.2.7
-pycosat==0.6.1
-pycountry==17.1.8
-pycparser==2.17
-pycrypto==2.6.1
-pycurl==7.43.0
-pyflakes==1.3.0
-Pygments==2.1.3
-pylint==1.5.4
-pymongo==2.9.1
-pyOpenSSL==16.2.0
-pyparsing==2.2.0
-PyPDF2==1.24
-Pyphen==0.9.1
-PyQRCode==1.1
-pyserial==2.6
-pytest==3.0.7
-python-dateutil==2.4.2
-python-engineio==0.8.7
-python-Levenshtein==0.12.0
-python-logstash==0.4.2
-python-pcl==0.2
-python-socketio==1.0
-pytz==2017.2
-PyYAML==3.10
-pyzmq==15.4.0
-QtAwesome==0.3.3
-qtconsole==4.2.1
-QtPy==1.3.1
-redis==2.10.3
-reportlab==3.1.44
-requests==2.14.2
-requests-toolbelt==0.8.0
-rope==0.9.4
-rsa==3.4.2
-ruamel-yaml===-VERSION
-s3transfer==0.1.10
-scandir==1.5
-scikit-image==0.12.3
-scikit-learn==0.18.1
-scipy==0.14.1
-setproctitle==1.1.10
-shippo==1.5.1
-shortuuid==0.5.0
-simplegeneric==0.8.1
-simplejson==3.5.2
-singledispatch==3.4.0.3
-six==1.11.0
-smmap==0.9.0
-smmap2==2.0.1
-snowballstemmer==1.2.1
-sockjs-tornado==1.0.3
-Sphinx==1.4.6
-sphinx-rtd-theme==0.2.4
-spyder==3.0.0
-SQLAlchemy==0.7.10
-sqlalchemy-migrate==0.7.2
-sqlparse==0.2.4
-ssh-import-id==3.21
-statistics==1.0.3.5
-statsmodels==0.6.1
-stl==0.0.3
-stop-words==2015.2.23.1
-subprocess32==3.2.7
-suds==0.4
-sympy==1.0
-tables==3.2.3.1
-tabulate==0.7.7
-Tempita==0.5.2
-tensorflow==1.0.1
-terminado==0.6
-terminaltables==3.1.0
-threadpool==1.3.2
-tinycss==0.3
-toolz==0.8.0
-tornado==4.4.1
-traitlets==4.3.0
-trollius==2.1
-Twisted==16.1.1
-ujson==1.33
-unicode-slugify==0.1.3
-unicodecsv==0.14.1
-Unidecode==0.4.19
-uritemplate==3.0.0
-urllib3==1.7.1
-vine==1.1.3
-wcwidth==0.1.7
-WeasyPrint==0.23
-Werkzeug==0.9.6
-widgetsnbextension==1.2.6
-wrapt==1.10.6
-WTForms==2.0.1
-xhtml2pdf==0.0.6
-xlrd==1.0.0
-XlsxWriter==0.9.3
-xlwings==0.10.0
-xlwt==1.1.2
-xmltodict==0.9.2
+Jinja2==2.10
+MarkupSafe==1.0
+oauthlib==2.0.6
+requests==2.18.4
+requests-oauthlib==0.8.0
+urllib3==1.22
+Werkzeug==0.14.1
 Xometry-API==1.1.5
-yapf==0.17.0
-zope.interface==4.0.5
