--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "babel-preset-react": "^6.22.0",
     "babelify": "^7.3.0",
     "bootstrap": "4.0.0-alpha.6",
-    "bootstrap-sass": "^3.3.7",
+    "bootswatch": "^4.0.0",
     "browser-sync": "^2.18.6",
     "browserify": "^14.0.0",
     "gulp": "^3.9.1",
@@ -26,6 +26,7 @@
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
+    "reactstrap": "^5.0.0-beta",
     "tether": "^1.4.0",
     "uglify": "^0.1.5",
     "ui": "^0.2.4",
