--- a/gmailapp.ini
+++ b/gmailapp.ini
@@ -8,4 +8,8 @@ socket = unboxfox.sock
 chmod-socket = 660
 vacuum = true
 
+# location of log files
+logto = /var/log/uwsgi/%n.log
+
 die-on-term = true
+
